# BasicOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  tascs_lab5B.c  tascs_lab5B.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/string/: string_.c  string_.h
libs/string/tasck/: tascs1.h  task10.h  task11.h  task12.h  task4.h  task5.h  task6.h  task7.h  task8.h  task9.h  tasks2.h  tasks3.h
